<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/mainFragment">

    <action
        android:id="@+id/action_global_aboutFragment"
        app:destination="@id/aboutFragment" />

    <action
        android:id="@+id/action_global_settingsFragment"
        app:destination="@id/settingsFragment" />

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.mycityapp.fragments.MainFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_categoryFragment"
            app:destination="@id/categoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.mycityapp.fragments.CategoryFragment"
        android:label="@string/Categories"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_categoryFragment_to_recomendationFragment"
            app:destination="@id/recomendationFragment" />
    </fragment>

    <fragment
        android:id="@+id/recomendationFragment"
        android:name="com.example.mycityapp.fragments.RecomendationFragment"
        android:label="@string/Recomendation"
        tools:layout="@layout/fragment_recomendation" >
        <action
            android:id="@+id/action_recomendationFragment_to_elementFragment"
            app:destination="@id/elementFragment" />
    </fragment>

    <fragment
        android:id="@+id/elementFragment"
        android:name="com.example.mycityapp.fragments.ElementFragment"
        android:label=""
        tools:layout="@layout/fragment_element" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.mycityapp.fragments.AboutFragment"
        android:label="@string/About" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.mycityapp.fragments.SettingsFragment"
        android:label="@string/Settings" />

</navigation>