<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_medium"
        android:gravity="center"
        android:text="@string/settings_swap_lang"
        android:textSize="@dimen/text_size_med"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rbEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_en"
            android:textSize="@dimen/text_size_low" />

        <RadioButton
            android:id="@+id/rbRu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lang_ru"
            android:textSize="@dimen/text_size_low" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>